Fix padding for upload form on mobile

--- a/frontend/src/styles/components/UploadForm.scss
+++ b/frontend/src/styles/components/UploadForm.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 50px;
+  padding: 50px 10px;
   width: 600px;
 
   label {
